Ajustes no Layout

--- a/rf-dashboard/src/index.css
+++ b/rf-dashboard/src/index.css
@@ -3,6 +3,7 @@
 body {
   display: flex;
   margin: 0px;
+  justify-content: space-between;
   /* flex-direction: row;
   background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url('./assets/background.png') no-repeat;
   background-size: cover;
