--- a/rf-dashboard/src/views/Login/styles.css
+++ b/rf-dashboard/src/views/Login/styles.css
@@ -18,6 +18,19 @@
   color: #FFF;
 }
 
+div.topo {
+  /* margin: 80px auto; */
+  display: flex;
+  width: 100%;
+  height: 40px;
+  flex-direction: column;
+  align-items: center;
+  background-color: #225378;
+  margin-top: 0px;
+  border-radius: 0px;
+  /* padding: 0 40px; */
+}
+
 div.login {
   /* margin: 80px auto; */
   display: flex;
