Otimizacao do codigo

--- a/rf-dashboard/src/index.css
+++ b/rf-dashboard/src/index.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   margin: 0px;
   justify-content: space-between;
+  margin: 0px;
   /* flex-direction: row;
   background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url('./assets/background.png') no-repeat;
   background-size: cover;
